# zenith-browser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
frontend/: package.json
frontend/public/: settings.html
frontend/src/: App.tsx  index.css  ipc.ts
frontend/src/components/: ErrorBoundary.tsx  PaletteSearch.tsx  SuggestionsDropdown.tsx  TabBar.tsx  Toolbar.tsx
frontend/src/test/: ErrorBoundary.test.tsx  setup.ts
src/: app.rs  config.rs  db.rs  ipc.rs  main.rs  menu.rs  tab.rs  ui_handler.rs  utils.rs
src/ui/: history.html  home.html  settings.html  ui.css  ui.html
