[package]
name = "zenith-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = { version = "0.55", features = ["fullscreen"] }
tao = { version = "0.35" }
muda = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
url = "2.5"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
rust-embed = "8.4"
mime_guess = "2.0.5"
